Got Noacier, Fixed alignment problems on region info, added region info on some pokemons

--- a/src/components/pokedex/pokedex-item/PokedexItem.css
+++ b/src/components/pokedex/pokedex-item/PokedexItem.css
@@ -36,4 +36,7 @@
     float: right;
     text-align: right;
     border-bottom-right-radius: 5px;
+    overflow: hidden;
+    max-width: 80px;
+    text-overflow: ellipsis;
 }
